fix map display bug on mobile

--- a/src/styles/Map.css
+++ b/src/styles/Map.css
@@ -1,3 +1,75 @@
+@media (prefers-color-scheme: light) {
+  #map .forecastHourMenu .leaflet-control {
+    background-color: #FFF;
+  }
+  #map .timeline-container .current-date {
+    background-color: #FFF;
+  }
+  #map .forecastDayMenu .leaflet-control {
+    background-color: #FFF;
+  }
+  #map .leaflet-top .leaflet-control {
+    background-color: #FFF;
+  };
+  #map .timeline {
+    color: black;
+  }
+  #map .timeline .leaflet-control:hover {
+    background-color: #d7f1d7;
+  }
+  #map .leaflet-top .leaflet-control:hover {
+    background-color: #d7f1d7;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  #map .leaflet-top .leaflet-control {
+    background-color: #242424;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #map .forecastHourMenu .leaflet-control {
+    background-color: #242424;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #map .timeline-container .current-date {
+    background-color: #242424;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #map .forecastDayMenu .leaflet-control {
+    background-color: #242424;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #map .timeline {
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #map .timeline .leaflet-control:hover {
+    background-color: black;
+  }
+  #map .leaflet-top .leaflet-control:hover {
+    background-color: black;
+  }
+}
+
+@media (max-width: 800px) {
+  #map .leaflet-control-attribution {
+    width: 100vw;
+  }
+
+  #map .timeline-container {
+    margin-bottom: 40px;
+  }
+}
+
+@media (min-width: 801px) {
+  #map .leaflet-control-attribution {
+    border-radius: 10px 0 0 0;
+  }
+
+  #map .timeline-container {
+    margin-bottom: 20px;
+  }
+}
+
 #map {
   width: 100%;
   height: 100%;
@@ -19,7 +91,6 @@
   justify-content: center;
   height: 95px;
   width: 100%;
-  margin-bottom: 20px;
 }
 
 #map .timeline {
@@ -52,7 +123,6 @@
 
 #map .forecastHourMenu .leaflet-control {
   min-width: 19px;
-  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 2px;
   font-weight: 600;
   cursor: pointer;
@@ -64,9 +134,7 @@
   font-size: 1.2em;
   height: 22px;
   font-weight: 400;
-  color: black;
   width: 250px;
-  background-color: rgba(255, 255, 255, 0.7);
   margin: 0 auto;
   margin-bottom: 5px;
   border-radius: 5px;
@@ -75,7 +143,6 @@
 #map .forecastDayMenu .leaflet-control {
   display: flex;
   padding: 2px 10px;
-  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 10px;
   font-weight: 600;
   cursor: pointer;
@@ -83,9 +150,7 @@
   align-items: center;
 }
 
-#map .timeline .leaflet-control:hover {
-  background-color: rgba(255, 255, 255, 0.9);
-}
+
 
 .leaflet-bottom .leaflet-control {
   margin: 0;
@@ -103,27 +168,21 @@
 #map .leaflet-top .leaflet-control {
   display: flex;
   padding: 2px 10px;
-  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 10px;
   font-weight: 600;
   cursor: pointer;
   height: 25px;
   align-items: center;
-  color: black;
   border: none;
 }
 
-#map .leaflet-top .leaflet-control:hover {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
 #map .leaflet-control-attribution {
-  background-color: #333333e3;
-  color: rgba(255, 255, 255, 1);
+  background-color: #242424;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 #map .leaflet-control-attribution a {
-  color: #81bb0f;
+  color: #82bb0fc6;
 }
 
 #map .leaflet-control-attribution a:hover {
